// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Utilities; SearchBox renders with mobile prop 1`] = `
<div
  className="search-container"
>
  <div
    className="form-group"
  >
    <input
      className="form-control"
      id="search-box-mobile"
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="Search"
      type="text"
    />
    <button
      className="btn btn-primary btn-xs"
      onClick={[Function]}
      type="button"
    >
      <i
        className="material-icons"
      >
        search
      </i>
    </button>
  </div>
</div>
`;

exports[`Utilities; SearchBox renders with no props 1`] = `
<div
  className="search-container"
>
  <div
    className="form-group"
  >
    <div
      className="input-group"
    >
      <div
        className="input-container"
        style={
          Object {
            "position": "relative",
          }
        }
      >
        <input
          className="form-control"
          id="search-box"
          onChange={[Function]}
          onKeyDown={[Function]}
          placeholder="Search"
          type="text"
        />
        <button
          className="hint-shortcuts"
          onClick={[Function]}
          tabIndex="-1"
          type="button"
        >
          <kbd>
            Ctrl
          </kbd>
          <kbd>
            K
          </kbd>
        </button>
      </div>
      <button
        className="btn btn-link"
        onClick={[Function]}
        type="button"
      >
        <i
          className="material-icons"
        >
          search
        </i>
      </button>
    </div>
  </div>
</div>
`;
